--- a/main.css
+++ b/main.css
@@ -6,6 +6,21 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+flex-box-mine-grid {
+	display: flex; 
+	flex-direction: row; 
+	flex-wrap: wrap; 
+}
+flex-box-mine-col {
+	display: flex; 
+	flex-direction: column; 
+	width: 33.333333%; 
+	min-width: 100%; 
+
+	@media (min-width: 1280px) { 
+		min-width: 0; 
+	}
+}
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
