--- a/main.css
+++ b/main.css
@@ -2335,10 +2335,9 @@ input, select, textarea {
 		}
 		
 		.image img {
-		    border-radius: 4px;
-		    display: block;       /* Ensure the image takes up the full container width */
-		    max-width: 100%;      /* Prevent the image from exceeding its container */
-		    height: auto;         /* Automatically adjust height to maintain aspect ratio */
+		     width: 100%; 
+		     height: 100%;
+	             object-fit: contain;         /* Automatically adjust height to maintain aspect ratio */
 		}
 
 		.image.left, .image.right {
